--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -79,7 +79,7 @@
             android:textSize="20sp"
             android:layout_marginTop="20dp"
             android:layout_marginLeft="20dp"
-            android:text="Top dishes"
+            android:text="@string/top_food"
             app:layout_constraintTop_toBottomOf="@id/rv_cats"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
@@ -96,6 +96,21 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tv_top"
             android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
+        <com.google.android.material.button.MaterialButton
+            android:layout_marginTop="20dp"
+            android:id="@+id/btn_toggle_language"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintWidth_percent="0.6"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/rv_top_food"
+            android:layout_width="0dp"
+            android:textStyle="bold"
+            android:textSize="20sp"
+            android:text="Toggle language"
+            android:layout_marginBottom="20dp"
+            app:layout_constraintBottom_toBottomOf="parent"
             android:layout_height="wrap_content"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
